--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,27 @@
     padding: 0;
     box-sizing:border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    z-index: 1000;
+    top: 0;
+    left: 0;
 }
 
 h1{
     font-size: 50px;
     line-height: 64px;
-    color: #222;
+    color:azure;
+}
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: black;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
 }
 
 /* Header-CSS */
@@ -18,8 +33,9 @@ h1{
     align-items: center;
     justify-content: space-between;
     padding: 20px 80px;
-    background: #e3e6e3;
+    background: #F0E2CE;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    position: sticky;
 }
 
 .logo{
@@ -30,6 +46,7 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 #nav-link li{
     list-style: none;
@@ -58,4 +75,124 @@ h1{
     bottom: -4px;
     left: 20px;
 }
-/* array of 5 numbers, sum of 4 numbers pair, find min and sum */
+
+/* Hero */
+#hero{
+    background-image: url('https://cdn.pixabay.com/photo/2016/11/19/15/40/clothes-1839935_1280.jpg');
+    height: 90vh;
+    width: 100%;
+    background-position: top 25% right 0;
+    background-size: cover;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: azure;
+}
+#hero button{
+    /* background-image: url('https://cdn.pixabay.com/photo/2016/10/14/04/33/modern-1739388_1280.jpg'); */
+    background-color: transparent;
+    border: 2;
+    padding: 14px 80px 14px 65px;
+    color: azure;
+    font-size: 15px;
+    cursor: pointer;
+    font-weight: 700;
+}
+.fe-box-padding {
+    padding: 40px 80px;
+}
+#feature{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.section-m1{
+    margin: 40px 0;
+}
+#feature .fe-box{
+    width: 180px;
+    height: 215px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 1px solid #cce7d0;
+    margin: 15px 0; 
+}
+#feature .fe-box img{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+}
+#feature .fe-box:hover{
+    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.20);
+}
+#feature .fe-box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #088178;
+    background-color: #fddde4;
+}
+#feature .fe-box:nth-child(2) h6{
+    background-color: #cdebbc;
+}
+#feature .fe-box:nth-child(3) h6{
+    background-color: #d1e8f2;
+}
+#feature .fe-box:nth-child(4) h6{
+    background-color: #cdd4f8;
+}
+#feature .fe-box:nth-child(5) h6{
+    background-color: #f6dbf6;
+}
+#feature .fe-box:nth-child(6) h6{
+    background-color: #fff2e5;
+}
+#banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url('https://cdn.pixabay.com/photo/2021/01/03/13/57/gingerbread-5884607_1280.jpg');
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+#banner h4{
+    color: #fff;
+    font-size: 16px;
+}
+#banner h2{
+    color: #fff;
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner h2 span{
+    color: red;
+}
+
+/* Header */
+#banner.about-header{
+    background-image: url('https://cdn.pixabay.com/photo/2013/11/21/21/16/storefront-215287_1280.jpg');
+}
+#about-head.section-p1{
+    padding: 40px 40px;
+}
+#about-head {
+    display: flex;
+    align-items: center;
+}
+#about-head img{
+    width: 50%;
+    height: auto;
+}
+#about-head div{
+    padding-left: 40px;
+}
